<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aloo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff">

    <ImageView
        android:id="@+id/a"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/color12"
        android:contentDescription="@string/add_contact"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_delete_forever_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/delete_contact"
        android:textColor="#ff000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a" />

    <Button
        android:id="@+id/btn_dialog"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/text_dialog"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/color12"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_dialog"
        app:layout_constraintTop_toBottomOf="@+id/text_dialog" />

    <Button
        android:id="@+id/btn_friend"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/text_dialog"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/btn_dialog"
        android:backgroundTint="@color/color12"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/text_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>