<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HelpActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarYour"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/purmiray"
        app:title="Help Us :-)"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/purmiray"
        app:strokeColor="#B5000000"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@id/upiCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:text="@string/donation"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/upiCard"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:strokeWidth="2dp"
        app:strokeColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/purmiray"
        app:layout_constraintTop_toBottomOf="@id/toolbarYour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center_horizontal|top">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/status"
                android:textColor="@color/white"
                android:text="@string/the_following_upi_id_is_for_donations"/>
        </com.google.android.material.card.MaterialCardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/status"
            android:layout_gravity="center_horizontal|bottom">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:text="@string/nishkarshfortheease_fam"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/upiBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/baseline_content_copy_24"/>
        </androidx.cardview.widget.CardView>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/purmiray"
        app:strokeColor="#B5000000"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@id/adCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:text="OR"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/adCard"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:strokeWidth="2dp"
        app:strokeColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/purmiray"
        app:layout_constraintTop_toBottomOf="@id/upiCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center_horizontal|top">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/status"
                android:textColor="@color/white"
                android:text="@string/click_below_to_watch_advertisement"/>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/watchAdBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/watch_ad"
            android:backgroundTint="@color/status"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            android:layout_gravity="center_horizontal|bottom">
        </com.google.android.material.button.MaterialButton>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>